--- a/data_supplement/compile_daily_riskfree.ipynb
+++ b/data_supplement/compile_daily_riskfree.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_KR.to_pickle('./data_supplement/df_riskfree_daily_all.pkl')",
+    "g_KR.to_pickle('./data_supplement/df_riskfree_daily_all.pkl')\n",
     "df_kr.to_pickle('./data_supplement/df_kr_g.pkl')"
    ]
   }
