--- a/data_supplement/compile_daily_riskfree.ipynb
+++ b/data_supplement/compile_daily_riskfree.ipynb
@@ -10,8 +10,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import pickle\n",
-    "import requests\n"
+    "import pickle"
    ]
   },
   {
@@ -45,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_KR.to_pickle('./data_supplement/df_riskfree_daily_all.pkl')\n",
-    "df_kr.to_pickle('./data_supplement/df_kr_g.pkl')"
+    "df_kr.to_pickle('./df_riskfree_daily_all.pkl')\n",
+    "g_KR.to_pickle('./df_kr_g.pkl')"
    ]
   }
  ],
