--- a/construct_input_price_and_cashflow.ipynb
+++ b/construct_input_price_and_cashflow.ipynb
@@ -20,38 +20,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['KR_ret_models_grid',\n",
-       " 'kernel_matrix_depository',\n",
-       " 'analysis_factor',\n",
-       " 'KR_ret_models',\n",
-       " 'shrinkage',\n",
-       " 'analysis_regression',\n",
-       " 'mask',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'data_supplement',\n",
-       " 'source',\n",
-       " 'script',\n",
-       " 'export_data']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.listdir('/share/data/discount_curve/discount_curve_construct_May.9,2022')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "id": "_aNzGTJXMrLA"
@@ -66,7 +34,6 @@
     "from datetime import datetime\n",
     "from pandas.tseries.offsets import *\n",
     "%matplotlib inline\n",
-    "#pd.options.display.max_columns = None #display all columns of dataframe\n",
     "from itertools import groupby\n",
     "import pickle\n",
     "\n",
@@ -84,15 +51,19 @@
    },
    "outputs": [],
    "source": [
-    "save_to_pickle=True\n",
-    "generate_C=True\n",
-    "mat_day=3650 #time to maturity maturity cutoff\n",
+    "save_to_pickle = True\n",
+    "generate_C = True\n",
+    "mat_day = 3650 #time to maturity maturity cutoff\n",
     "\n",
+    "# where to save formatted data\n",
+    "dir_output = './B_and_C/' \n",
     "# where to save B mat and date lookup tables\n",
-    "dir_B='./B_max_ttm_10yr/'\n",
+    "dir_B = dir_output+'B_max_ttm_10yr/'\n",
     "# where to save C's\n",
-    "npz_dir='./npz_C/'\n",
+    "npz_dir = dir_output+'npz_C/'\n",
     "\n",
+    "if not os.path.exists(dir_output):\n",
+    "    os.mkdir(dir_output)\n",
     "if not os.path.exists(dir_B):\n",
     "    os.mkdir(dir_B)\n",
     "if not os.path.exists(npz_dir):\n",
@@ -110,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "gg5LwMDrMrLD"
    },
@@ -143,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "V-ou6dxuMrLE"
    },
@@ -166,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "id": "QLXsAj5lMrLF",
     "outputId": "621050b9-989a-44f7-985b-b703515c8309",
@@ -176,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "15118"
+       "15367"
       ]
      },
      "metadata": {},
@@ -190,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "id": "Eyvzn3YHMrLG",
     "outputId": "717c434b-956a-44b4-f573-401b31984e77"
@@ -354,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "referenced_widgets": [
@@ -368,12 +339,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3210b05c460547069288dfe266981161",
+       "model_id": "44560d9566214164a4c7a6ca259cbb4d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5586 [00:00<?, ?it/s]"
+       "  0%|          | 0/5749 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -405,22 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "vIHPmBciMrLI"
-   },
-   "outputs": [],
-   "source": [
-    "assert((df_nomprc_bin.columns==df_tdretnua_bin.columns).all()&\\\n",
-    "(df_nomprc_bin.columns==df_ttm.columns).all())\n",
-    "\n",
-    "assert((df_nomprc_bin.index==df_tdretnua_bin.index).all()&\\\n",
-    "(df_nomprc_bin.index==df_ttm.index).all())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "id": "KVw3Q0leMrLI",
     "outputId": "8539a867-8440-4788-8ad1-66d38505895b"
@@ -430,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of missing obs: 1124341\n"
+      "number of missing obs: 1027298\n"
      ]
     }
    ],
@@ -448,42 +404,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "id": "jZ8m7IcsMrLI",
-    "outputId": "70ce1c82-1971-4e5e-85f7-4f9d5a3820d0"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# check if quote observations can turn from available to not available then available\n",
-    "# yes this happens\n",
-    "for col in df_nomprc_bin.columns:\n",
-    "    df_slice=df_nomprc_bin[col]\n",
-    "\n",
-    "    flg=-1\n",
-    "    for j,k in enumerate(df_slice):\n",
-    "        if (flg==-1) and k:\n",
-    "            flg=1 # first True\n",
-    "        if (flg==1) and (not k):\n",
-    "            flg=0 # True changes to False for the first time\n",
-    "        if (flg==0) and k:\n",
-    "            flg=-2 # True changes to False and changes to True\n",
-    "            break\n",
-    "    if flg==-2:\n",
-    "        break\n",
-    "print(flg)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "Se76BmVTMrLJ"
@@ -495,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "id": "mV5yc3I-MrLJ",
     "outputId": "f22cea4a-707c-4bbf-bfcc-cc77fb16aa92"
@@ -507,11 +427,11 @@
      "text": [
       "mat_day cutoff:3650\n",
       "generate_C:True\n",
-      "T:15118\n",
-      "nmax:380\n",
-      "num_kytreasno:5586\n",
+      "T:15367\n",
+      "nmax:384\n",
+      "num_kytreasno:5749\n",
       "t=0 date:1961-06-14 00:00:00\n",
-      "t=T-1 date:2021-12-31 00:00:00\n"
+      "t=T-1 date:2022-12-30 00:00:00\n"
      ]
     }
    ],
@@ -535,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "id": "N6c8ASBRMrLJ"
    },
@@ -544,12 +464,12 @@
     "# generate a dictionary of parameters and save it\n",
     "dict_par = {'T':T, 'Nmax':mat_day, 'Nmax_C':Nmax_C, 'nmax':nmax,\\\n",
     "            't0':df_nomprc.index[0], 'tT-1':df_nomprc.index[-1],\\\n",
-    "            'num_kytreasno':num_kytreasno, 'prefix_C':prefix_C, 'npz_dir':npz_dir}\n"
+    "            'num_kytreasno':num_kytreasno, 'prefix_C':prefix_C, 'npz_dir':npz_dir}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "id": "_NvWSa9dMrLJ",
     "outputId": "5a96630f-43fa-4068-d877-0a65e4add55d"
@@ -569,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "referenced_widgets": [
@@ -583,32 +503,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c93d4e101ec44a68d890cedda0742a6",
+       "model_id": "4907fa891eae48c198f128a1d47f4863",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/15118 [00:00<?, ?it/s]"
+       "  0%|          | 0/15367 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub message rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_msg_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -626,7 +530,7 @@
     "ttm_day_mat = np.full([nmax,T],np.nan) # track ttm in days, aligned with B_mat\n",
     "\n",
     "pbar = tqdm(total=T)\n",
-    "for t in range(T):\n",
+    "for t in range(T):   \n",
     "    #find kytreasno whose ttm is between (0, mat_day]\n",
     "    df_ttm_slice = df_ttm.iloc[t]\n",
     "    today = df_ttm_slice.name\n",
@@ -649,8 +553,6 @@
     "\n",
     "    # list of kytreasno to use for time t\n",
     "    lst_kytreasno = list(set_kytreasno_B.intersection(set_kytreasno_ret))\n",
-    "    \n",
-    "    \n",
     "    \n",
     "    \n",
     "    ## Exclude the two most recently issued securities with \n",
