--- a/mask/calculate_duration_and_ytm.ipynb
+++ b/mask/calculate_duration_and_ytm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "afraid-calvin",
    "metadata": {},
    "outputs": [],
@@ -24,35 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "aware-charles",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_B = '../Data/B_max_ttm_10yr/'\n",
-    "df_t_lookup_daily = pd.read_pickle('../Data/B_max_ttm_10yr/df_t_lookup_daily.pkl')\n",
-    "# df_t_lookup_monthly=pd.read_pickle('../Data/B_max_ttm_10yr/df_t_lookup_monthly.pkl')\n",
+    "dir_B = '../B_and_C/B_max_ttm_10yr/'\n",
+    "df_t_lookup_daily = pd.read_pickle(dir_B + 'df_t_lookup_daily.pkl')\n",
     "T = len(df_t_lookup_daily)\n",
     "\n",
     "# read price vector \n",
-    "B_mat=np.load(dir_B+'B_mat.npy')\n",
+    "B_mat = np.load(dir_B+'B_mat.npy')\n",
     "with open(dir_B+\"dict_par.pkl\", \"rb\") as handle:\n",
     "    dict_par = pickle.load(handle)\n",
     "    \n",
-    "prefix_C,Nmax,nmax,dir_npz=[dict_par[key] for key in ['prefix_C','Nmax','nmax','npz_dir']]\n",
-    "arr_h=np.arange(1,Nmax+1)\n",
+    "prefix_C,Nmax,nmax,dir_npz = [dict_par[key] for key in ['prefix_C','Nmax','nmax','npz_dir']]\n",
+    "arr_h = np.arange(1,Nmax+1)\n",
     "\n",
-    "dir_out='./'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e950dc4e-f9d0-432b-80f9-c04ee60c538a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dir_npz='../Data/npz_C_10yr_ver_12312021/'"
+    "dir_out = './'"
    ]
   },
   {
@@ -65,19 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "included-laser",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45b557b21fd94ee58854a453638cc795",
+       "model_id": "f5b2c1fca9f14592825d0e90ae9ee552",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/15117 [00:00<?, ?it/s]"
+       "  0%|          | 0/15366 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -85,32 +74,30 @@
     }
    ],
    "source": [
-    "mat_ttm=np.full((T-1,nmax),np.nan)\n",
-    "mat_nt=np.full(T-1,np.nan)\n",
+    "mat_ttm = np.full((T-1,nmax),np.nan)\n",
+    "mat_nt = np.full(T-1,np.nan)\n",
     "\n",
-    "pbar=tqdm(total=T-1)\n",
-    "for t in range(T-1):\n",
+    "pbar = tqdm(total=T-1)\n",
+    "for t in range(T-1): \n",
     "\n",
-    "    #today_str=df_t_lookup.index[t].strftime('%Y-%m-%d')   \n",
+    "    B = B_mat[:,t]\n",
+    "    csr_mat_name = '.'+dir_npz+prefix_C+'C_'+str(t)+'.npz'\n",
     "\n",
-    "    B=B_mat[:,t]\n",
-    "    csr_mat_name=dir_npz+prefix_C+'C_'+str(t)+'.npz'\n",
-    "\n",
-    "    csr_mat=sps.load_npz(csr_mat_name)\n",
-    "    nt=np.count_nonzero(B)\n",
+    "    csr_mat = sps.load_npz(csr_mat_name)\n",
+    "    nt = np.count_nonzero(B)\n",
     "\n",
     "    #remove empty rows from B and C\n",
-    "    B=B[:nt]\n",
-    "    C=csr_mat.toarray()[:nt,1:]\n",
+    "    B = B[:nt]\n",
+    "    C = csr_mat.toarray()[:nt,1:]\n",
     "    #ttm in day, -1 to convert into index\n",
-    "    lst_ttm_inday=np.apply_along_axis(lambda row: len(row)-(row!=0)[::-1].argmax(),1,C)\n",
-    "    mat_ttm[t,:nt]=lst_ttm_inday\n",
-    "    mat_nt[t]=nt\n",
+    "    lst_ttm_inday = np.apply_along_axis(lambda row: len(row)-(row!=0)[::-1].argmax(),1,C)\n",
+    "    mat_ttm[t,:nt] = lst_ttm_inday\n",
+    "    mat_nt[t] = nt\n",
     "    \n",
     "    pbar.update(1)\n",
     "    \n",
-    "np.save(dir_out+'mat_ttm.npy', mat_ttm)\n",
-    "np.save(dir_out+'mat_nt.npy', mat_nt)"
+    "np.save(dir_out + 'mat_ttm.npy', mat_ttm)\n",
+    "np.save(dir_out + 'mat_nt.npy', mat_nt)"
    ]
   },
   {
@@ -123,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "dadcfd71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_filter=np.full((T-1, nmax), False)\n",
+    "mat_filter = np.full((T-1, nmax), False)\n",
     "for t in range(T-1):\n",
-    "    nt=int(mat_nt[t])\n",
-    "    arr_ttm=mat_ttm[t,:nt]\n",
-    "    mat_filter[t,:nt][arr_ttm>=90]=True\n",
+    "    nt = int(mat_nt[t])\n",
+    "    arr_ttm = mat_ttm[t,:nt]\n",
+    "    mat_filter[t,:nt][arr_ttm>=90] = True\n",
     "np.save('mat_filter_maturity_90days.npy', mat_filter)"
    ]
   },
@@ -146,19 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "dutch-glenn",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13497f84648741d995a96145fcb79563",
+       "model_id": "f80d78b6750949248d98f106779f3739",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/15117 [00:00<?, ?it/s]"
+       "  0%|          | 0/15366 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -166,31 +153,31 @@
     }
    ],
    "source": [
-    "mat_dur=np.full((T-1,nmax),np.nan)\n",
-    "mat_ytm=np.full((T-1,nmax),np.nan)\n",
+    "mat_dur = np.full((T-1,nmax),np.nan)\n",
+    "mat_ytm = np.full((T-1,nmax),np.nan)\n",
     "\n",
-    "pbar=tqdm(total=T-1)\n",
+    "pbar = tqdm(total=T-1)\n",
     "for t in range(T-1):\n",
     "\n",
-    "    B=B_mat[:,t]\n",
-    "    csr_mat_name=dir_npz+prefix_C+'C_'+str(t)+'.npz'\n",
-    "    csr_mat=sps.load_npz(csr_mat_name)\n",
+    "    B = B_mat[:,t]\n",
+    "    csr_mat_name = '.'+dir_npz+prefix_C+'C_'+str(t)+'.npz'\n",
+    "    csr_mat = sps.load_npz(csr_mat_name)\n",
     "    \n",
-    "    nt=int(mat_nt[t])\n",
-    "    B=B[:nt]\n",
-    "    C=csr_mat.toarray()[:nt,1:]\n",
+    "    nt = int(mat_nt[t])\n",
+    "    B = B[:nt]\n",
+    "    C = csr_mat.toarray()[:nt,1:]\n",
     "\n",
     "    for i in range(nt):\n",
-    "        C_i,B_i=C[i,:],B[i]\n",
-    "        t_cashflow=np.nonzero(C_i)[0]+1 # unit in days. time TO cashflow.\n",
-    "        cashflow=C_i[t_cashflow-1]\n",
+    "        C_i,B_i = C[i,:],B[i]\n",
+    "        t_cashflow = np.nonzero(C_i)[0]+1 # unit in days. time TO cashflow.\n",
+    "        cashflow = C_i[t_cashflow-1]\n",
     "        #calculate annualized ytm and duration\n",
     "        mat_ytm[t,i], mat_dur[t,i] = utils.get_ytm_and_duration(cashflow,t_cashflow,B_i)\n",
     "\n",
     "    pbar.update(1)\n",
     "\n",
-    "np.save(dir_out+'mat_dur.npy', mat_dur)\n",
-    "np.save(dir_out+'mat_ytm.npy', mat_ytm)"
+    "np.save(dir_out + 'mat_dur.npy', mat_dur)\n",
+    "np.save(dir_out + 'mat_ytm.npy', mat_ytm)"
    ]
   }
  ],
